# serinus

./: CMakeLists.txt  README.md
docs/: HelloWorld.md  _config.yml  serinus.md
docs/_posts/: 2022-11-18-welcome-to-jekyll.markdown
python/: iBUS_pseudocode.py  ibus-test.py  ibus.py
src/: CMakeLists.txt  picodrone.c
src/BMP180/: CMakeLists.txt  bmp180.c  bmp180.h  bmp180Demo.c
src/FatFs_SPI/: hw_config.c
src/FlySkyIBus/: CMakeLists.txt  FlySkyIBus.c  FlySkyIBus.cpp  FlySkyIBus.h  FlySkyIBusDemo.c  FlySkyIBusDemo.cpp  uart_test.c
src/FlySkyIBus/arduino/: FlySkyIBus.cpp
src/MPU6050/: CMakeLists.txt  mpu6050.c  mpu6050.h  mpu6050Demo.c  mpu6050_i2c.c
src/PID/: CMakeLists.txt  PID.c  PID.h
src/PWM/: CMakeLists.txt  pwm.h  pwmDemo.c
src/Tests/: CMakeLists.txt  HelloBlink.c  Test_BMPandMPU.c  Test_FatFsSPI.c  Test_PWMvsFSIBus.c  Test_PWMvsFSIBus_v2.c  hello_pwm.c  varSizes.c
src/i2c/: CMakeLists.txt  i2c.c  i2c.h
src/ultrasound/: CMakeLists.txt  ultrasound.c  ultrasound.h  ultrasoundDemo.c
